--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@belharradi.j/ajaxios",
-  "version": "2.0.2",
+  "name": "@ajaxios/ajaxios",
+  "version": "1.0.0",
   "description": "sending ajax with form",
   "main": "index.js",
   "scripts": {
